--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,15 @@
 @import "@fontsource/roboto-mono/700.css";
 
 @layer base {
+  *,
+  *::before,
+  *::after {
+    /* GLOBAL SMOOTH THEME TRANSITION */
+    transition-property: background-color, border-color, color, fill, stroke;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 300ms;
+  }
+
   body {
     background-color: var(--color-primary-bg);
     color: var(--color-dark-12);
